Adds config references; removes deprecated JVM flag.